force-app/main/default/objects/agrid__Filter__c/agrid__Filter__c.object-meta.xml
<CustomObject>
    <label>Filter</label>
    <nameField>
        <displayFormat>GFLT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>