force-app/main/default/objects/agrid__Filter__c/fields/agrid__Condition__c.field-meta.xml
<CustomField>
    <fullName>agrid__Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <label>Equals</label>
            </value>
            <value>
                <fullName>!=</fullName>
                <label>Not Equal To</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Greater or Equal</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Less or Equal</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Includes</label>
            </value>
            <value>
                <fullName>NOT IN</fullName>
                <label>Excludes</label>
            </value>
            <value>
                <fullName>Does not Contain</fullName>
            </value>
            <value>
                <fullName>Starts With</fullName>
            </value>
            <value>
                <fullName>Ends With</fullName>
            </value>
            <value>
                <fullName>Between</fullName>
            </value>
            <value>
                <fullName>Not Between</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>