force-app/main/default/objects/agrid__Filter__c/fields/agrid__Configuration__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>