force-app/main/default/objects/agrid__Filter__c/fields/agrid__Global_Constant__c.field-meta.xml
<CustomField>
    <fullName>agrid__Global_Constant__c</fullName>
    <label>Global Constant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>