force-app/main/default/objects/agrid__Filter__c/fields/agrid__Long_Value__c.field-meta.xml
<CustomField>
    <fullName>agrid__Long_Value__c</fullName>
    <label>Long Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>