force-app/main/default/objects/agrid__Filter__c/fields/agrid__Order__c.field-meta.xml
<CustomField>
    <fullName>agrid__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>