force-app/main/default/objects/agrid__Filter__c/fields/agrid__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>agrid__Related_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Object</label>
    <referenceTo>agrid__Related_Object__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>