force-app/main/default/objects/agrid__Filter__c/fields/agrid__Ruleset__c.field-meta.xml
<CustomField>
    <fullName>agrid__Ruleset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruleset</label>
    <referenceTo>agrid__Ruleset__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>