force-app/main/default/objects/agrid__Filter__c/fields/agrid__Value__c.field-meta.xml
<CustomField>
    <fullName>agrid__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>